# voxykey

./: .gitignore  pyproject.toml
src/voxykey/: __main__.py  main.py
src/voxykey.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/voxykey/app/: config.py  logging_setup.py  tray.py
src/voxykey/core/: audio.py  hotkeys.py  inject.py  pipeline.py  stt.py  translate.py
