[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxykey"
version = "0.1.0"
description = "Local speech-to-text translation keyboard tray app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pystray>=0.19.5",
  "Pillow>=10.0.0",
  "sounddevice>=0.5.0",
  "numpy>=1.26.0",
  "faster-whisper>=1.0.0",
  "ctranslate2>=4.5.0",
  "sentencepiece>=0.2.0",
  "pynput>=1.7.7",
  "pyperclip>=1.8.2",
  "platformdirs>=4.2.0",
  "tomli_w>=1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[project.scripts]
voxykey = "voxykey.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
